--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- SEO -->
     <meta name="author" content="Ditonate">
-    <meta name="copyright" content="Ditonate Studio">
+    <meta name="copyright" content="Ditonate">
     <meta name="description" content="Персональный сайт Игоря. Разработка — Ditonate.">
 
     <script src="https://cdn.tailwindcss.com"></script>
